<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <!-- ImageView del encabezado -->
    <ImageView
        android:id="@+id/headerImage"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="-75dp"
        android:src="@drawable/headerandfooter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/register_header_image_desc" />

    <!-- TextView del título -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title_text"
        android:textSize="44sp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="160dp"
        app:layout_constraintTop_toBottomOf="@id/headerImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- CardView para los campos de entrada -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/background_card_login"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Campo de entrada de nombre de usuario -->
            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_username_hint"
                android:inputType="textPersonName"
                android:layout_marginBottom="8dp" />

            <!-- Campo de entrada de correo electrónico -->
            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_email_hint"
                android:inputType="textEmailAddress" />

            <!-- Campo de entrada de contraseña -->
            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password_hint"
                android:inputType="textPassword"
                android:layout_marginTop="8dp" />

            <!-- Botón de registro -->
            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_button_text"
                android:layout_marginTop="16dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Texto de inicio de sesión -->
    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_login_text"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- ImageView del pie de página -->
    <ImageView
        android:id="@+id/footerImage"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        android:layout_marginBottom="-80dp"
        android:src="@drawable/headerandfooter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
