<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    cardview:cardCornerRadius="8dp"
    cardview:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- Título "Usuario encontrado" -->
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_user_found"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingBottom="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Imagen del usuario -->
            <ImageView
                android:id="@+id/imageViewUser"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_launcher_background"
                android:layout_marginEnd="10dp" />

            <!-- Información del usuario -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_user" />

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_user" />
            </LinearLayout>

            <!-- Botón "Chatear" -->
            <Button
                android:id="@+id/buttonChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_button"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
