<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Chat">

    <!-- ImageView de encabezado -->
    <ImageView
        android:id="@+id/headerImage"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:src="@drawable/headerandfooter"
        android:scaleType="fitCenter"
        android:layout_marginTop="-75dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/chat_header_image_desc" />

    <!-- TextView para el título -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_title_text"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/headerImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <!-- CardView para el campo de entrada de correo electrónico y el botón de búsqueda -->
    <androidx.cardview.widget.CardView
        android:id="@+id/listviewBuscarUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/searchEmailEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/chat_email_hint"
                android:inputType="textEmailAddress"
                android:layout_weight="1" />

            <Button
                android:id="@+id/searchUserButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_search_button" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- CardView para mostrar los usuarios encontrados -->
    <androidx.cardview.widget.CardView
        android:id="@+id/listviewUsuarios"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/listviewBuscarUsuario"
        app:layout_constraintBottom_toTopOf="@id/conversationsListView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ListView
            android:id="@+id/usersListView"
            android:layout_width="match_parent"
            android:layout_height="100dp" />
    </androidx.cardview.widget.CardView>

    <!-- CardView para mostrar las conversaciones -->
    <TextView
        android:id="@+id/textViewMiddleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_middle_title"
        android:textStyle="bold"
        android:textSize="24dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/listViewChatUsuarios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listviewUsuarios" />

    <androidx.cardview.widget.CardView
        android:id="@+id/listViewChatUsuarios"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/textViewMiddleTitle"
        app:layout_constraintBottom_toTopOf="@id/messageInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ListView
            android:id="@+id/conversationsListView"
            android:layout_width="match_parent"
            android:layout_height="195dp" />
    </androidx.cardview.widget.CardView>

    <!-- Layout para el campo de entrada de mensaje y el botón de enviar -->
    <LinearLayout
        android:id="@+id/messageInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="-38dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/listViewChatUsuarios"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Campo de entrada de mensaje -->
        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/chat_message_hint"
            android:inputType="textMultiLine" />

        <!-- Botón para enviar mensaje -->
        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_send_button" />
    </LinearLayout>

    <!-- ImageView de pie de página -->
    <ImageView
        android:id="@+id/footerImage"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:src="@drawable/headerandfooter"
        android:scaleType="fitCenter"
        android:layout_marginBottom="-80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
